<resources>
    <string name="app_name">golazzos</string>
    <string name="facebook_app_id">972710989474575</string>
    <string name="consumer_twiiter_key">1JOPJviQiTezqIPgjwy2aDdNN</string>
    <string name="secret_twitter_key">VLN0QBy3gjjeaqJVKo8mgUBEhB2Bgic1Y06E0EQsvxIBnzAA2i</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="sdk_key">b1431e56dcb20ec91a020287268d120bacf4db1c362752d08b3f654633322021</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="terminos_y_condiciones">AL COMENZAR ACEPTAS LOS <u>TÉRMINOS Y CONDICIONES</u></string>
    <string name="debes_aceptar">Debes aceptar términos y condiciones para crear tu cuenta</string>
    <string name="olvidaste_la_contrasena"><u>¿OLVIDASTE LA CONTRASEÑA?</u></string>

    <string name="action_settings">Mi Cuenta</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_salir">Salir</string>

    <string-array name="ligas">
        <item>Champions League</item>
        <item>UEFA</item>
        <item>Liga Postobon</item>
        <item>Liga Española</item>
        <item>Liga Inglesa</item>
        <item>Liga Italiana</item>
    </string-array>
    
    <string name="title_activity_sign_in">Iniciar sesión</string>
    <string name="title_activity_sign_up">Crear una cuenta</string>
    <string name="title_activity_wizard_onectivity">Copy Wizard</string>
    <string name="title_activity_wizard_two">Copy Wizard</string>
    <string name="title_activity_wizard_three">Copy Wizard</string>
    <string name="title_activity_wizard_four">Copy Wizard</string>
    <string name="title_activity_initial">InitialActivity</string>

    <!-- Splash -->

    <string name="ya_tengo_una_cuenta">YA TENGO UNA CUENTA</string>
    <string name="crea_tu_cuenta">CREA TU CUENTA</string>
    <string name="acceso_rapido">¿Acceso rápido?</string>
    <string name="ingresa_con_facebook"><u>" Ingresa con facebook</u></string>
    <string name="indica_marcador">Indica marcador</string>
    <string name="informacion">Información</string>
    
    <!-- Primer wizard -->
    
    <string name="te_damos_la_bienvenida">¡Te damos la bienvenida!</string>
    <string name="antes_de_jugar">Antes de comenzar a jugar es necesario realizar\nunos pasos de calentamiento...</string>
    <string name="ponte_la_camiseta">PONTE LA CAMISETA DE TU EQUIPO</string>
    <string name="todos_tenemos_equipo_alma">Todos tenemos un equipo del alma,\nselecciona el tuyo</string>
    <string name="siguiente_button">SIGUIENTE</string>
    
    <!-- Segundo wizard -->

    <string name="clubes_ponen_celebrar">TAMBIÉN TE GUSTA...</string>
    <string name="selecciona_tus_equipos">Selecciona tus equipos favoritos (Máx. 8)</string>
    <string name="agregar_button">AGREGAR</string>
    <string name="debes_seleccionar_una_liga">Debes seleccionar una liga</string>
    <string name="debes_seleccionar_un_equipo">Debes seleccionar un equipo</string>
    <string name="equipo_agregado">Este equipo ya esta entre tus favoritos</string>
    <string name="equipos_agregados_completos">Ya no puedes agregar a más equipos</string>


    <!-- Login -->

    <string name="o_llena_los_campos">ó llena los campos</string>
    <string name="error_facebook">Existió un error al momento de realizar la conexión con facebook, por favor intente nuevamente</string>


    <!-- Loaders -->

    <string name="loader_descarga">Realizando operación, por favor espera.</string>
    <string name="response">response</string>

    <!-- Lista de partidos -->
    <string name="partidos">PARTIDOS</string>
    <string name="por_jugar">POR JUGAR</string>
    <string name="en_vivo">EN VIVO</string>
    <string name="finalizado">FINALIZADO</string>
    <string name="format_horas">%1$s | %2$s | %3$s</string>
    <string name="format_horas_text"> DÍA | HORAS | MINS </string>
    <string name="cierra_en">Cierra en:</string>
    <string name="local">Local</string>
    <string name="visitante">Visitante</string>
    <string name="estadisticas">ESTADÍSTICAS</string>
    <string name="jugar">JUGAR</string>
    <string name="cincuenta_puntos">50\nPUNTOS</string>
    <string name="juegas">JUEGAS</string>
    <string name="ganas">GANAS</string>
    <string name="cien_puntos">100\nPUNTOS</string>
    <string name="doscientos_puntos">200\nPUNTOS</string>

    <!-- Menu -->
    <string name="format_hola">Hola, %1$s</string>
    <string name="format_nivel_menu">Nivel %1$s</string>
    <string name="puntos_label">PUNTOS</string>
    <string name="suplente">Suplente</string>
    <string name="titular">Titular</string>
    <string name="quiero_ser_titular">¡Quiero ser titular!</string>
    <string name="perfil_menu">PERFIL</string>
    <string name="estadio_menu">ESTADIO</string>
    <string name="partidos_menu">PARTIDOS</string>
    <string name="jugadas_menu">JUGADAS</string>
    <string name="ayuda_menu">AYUDA</string>
    <string name="golazzos_menu">GOLAZZOS</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>

    <!-- Tercer wizard -->
    <string name="haz_tu_convocatoria">HAZ TU CONVOCATORIA</string>
    <string name="invita_a_tus_amigos">¡Invita a tus amigos y te regalamos <b>300 puntos</b>!</string>

    <!-- Alertas -->
    <string name="aceptar_button">Aceptar</string>
    <string name="titulo_alerta">Selecciona tipo de jugada</string>
    <string name="error_titulo">Se ha producido un error</string>

    <!-- Confirmacion jugada-->

    <string name="format_jugada">Jugaste en el:</string>
    <string name="marcador">Marcador</string>
    <string name="gana_pierde">Gana/Pierde</string>
    <string name="gana_visitante">Gana Visitante</string>
    <string name="gana_local">Gana Local</string>
    <string name="empate">Empate</string>
    <string name="confirmar_jugada">Confirmar Jugada</string>
    <string name="confirmacion_titulo">CONFIRMACIÓN</string>

    <string name="validador">Por favor verifique los datos e intente nuevamente</string>

    <!-- Cuarto wizard -->

    <string name="no_te_quedes_en_banca">COMIENZA COMO TITULAR</string>
    <string name="estas_listo"><b>¡Estás listo!</b>\nSuscríbete y comienza a jugar como <b>Titular</b></string>
    <string name="comenzar_a_jugar">COMENZAR A JUGAR</string>


    <string name="hello_world">Funciones pagos golazzos:</string>
    <string name="get_catalog_button">Obtener Catalogo&#8230;</string>
    <string name="pay_action_button">Solicitar compra de Item&#8230;</string>
    <string name="restore_purchases_button">Restore Purchased Items&#8230;</string>
    <string name="countries_list_action_button">Get Countries List&#8230;</string>
    <string name="user_data_valid_action_button">Check if User Data is Valid&#8230;</string>
    <string name="send_pin_action_button">Send Pin&#8230;</string>
    <string name="validate_pin_action_button">Validate Pin&#8230;</string>
    <string name="get_subscription_status_action_button">Check if User has Permission to Access&#8230;</string>

    <string name="puntos_a_jugar">Indica puntos a jugar</string>

    <string name="no_tienes_suficientes_puntos">No tienes suficientes puntos para hacer esta jugada.</string>

    <string name="error_transaccional">Existió un error al momento de realizar la operación, intenta nuevamente</string>

    <string name="debes_seleccionar_equipo_del_alma">Debes seleccionar un equipo del alma</string>
    <string name="debes_seleccionar_equipo_favorito">Debes seleccionar al menos un equipo favorito</string>
    <string name="debes_seleccionar_marcador">Debes colocar un marcador para equipo local y equipo visitante</string>


    <!-- Estadio -->
    <string name="estadios_title">ESTADIO</string>
    <string name="que_tienes_en_mente">¿QUÉ TIENES EN MENTE?</string>
    <string name="fanaticada">FANATICADA</string>
    <string name="equipos">EQUIPOS</string>
    <string name="ranking">RANKING</string>
    <string name="amigos">AMIGOS</string>
    <string name="convoca_mas_jugadores">¡CONVOCA MÁS<![CDATA[<br/>]]>JUGADORES Y GANA<![CDATA[<br/>]]><![CDATA[<b><font color=#d2ff00>300 PUNTOS</b>]]>!</string>
    <string name="invitar_amigos">INVITAR AMIGOS</string>
    <string name="hace_dos_minutos">Hace 2 minutos</string>

    <!-- Estadio escribe algo -->

    <string name="cancelar">CANCELAR</string>
    <string name="publicar">PUBLICAR</string>
    <string name="que_tienes_en_mente_hint">¿Qué tienes en mente?</string>

    <!-- Detalle noticia estadio -->

    <string name="comentar">Comentar</string>
    <string name="me_gusta">Me gusta</string>
    <string name="compartir">Compartir</string>

    <!-- Actualizacion equipos del alma y favoritos -->

    <string name="finalizar">FINALIZAR</string>
    <string name="actualiza_tu_equipo_del_alma">¡Actualiza tu equipo del alma!</string>
    <string name="si_ya_posees_uno_y_deseas_cambiar">Si deseas cambiar tu equipo del alma\nes hora de hacerlo, es muy sencillo</string>
    <string name="selecciona_opcion">¿Qué deseas hacer?</string>

    <string name="estadisticas_header">ESTADÍSTICAS</string>

    <string name="drop_down_ligas">LIGAS</string>
    <string name="drop_down_equipos">EQUIPOS</string>

    <!-- NIVEL -->

    <string name="puntos_format">%1$s\nACIERTOS</string>
    <string name="recompensa_format">Como recompensa obtuviste: <b>%1$s puntos</b></string>
    <string name="nivel">NIVEL</string>
    <string name="trofeos">TROFEOS</string>
    <string name="aciertos">ACIERTOS</string>
    <string name="ganadores">GANADORES</string>
    <string name="nivel_number_name_format"><b>Nivel %1$s</b>  %2$s</string>
    <string name="mensaje_exitoso">Tu mensaje fue posteado con éxito</string>
    <string name="error_mensaje_vacio">Debes escribir algo para poder publicar.</string>

    <string name="equipos_favoritos">EQUIPOS FAVORITOS</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="la_camiseta_de_tu_equipo">LA CAMISETA DE TU EQUIPO</string>
    <string name="equipo_del_alma">EQUIPO DEL ALMA</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="clubes_que_tambien_te_ponen_a_celebrar">CLUBES QUE TAMBIÉN TE PONEN A CELEBRAR</string>

    <string name="error_invitacion_facebook">Ocurrió un error al momento de realizar la invitación vía facebook, por favor intenta nuevamente</string>
    <string name="error_invitacion_mail">Ocurrió un error al momento de realizar la invitación vía correo, por favor intenta nuevamente</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_existen_resultados">No existen resultados para mostrar, por favor intenta más tarde</string>
    <string name="apuesta_exitosa">Su apuesta fue realizada exitosamente.</string>
    <string name="operacion_exitosa">Operación exitosa</string>

    <string name="nombre_label">NOMBRE</string>
    <string name="posicion_label">POSICIÓN</string>
    <string name="premios_label">PREMIOS</string>
    <string name="ganadores_header">GANADORES</string>

</resources>
