<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6473f" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipos_favoritos"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:id="@+id/textView22"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:textStyle="bold"
            android:textColor="#005b7d"
            android:layout_height="match_parent"
            android:text="@string/equipo_del_alma"
            android:id="@+id/textViewEquipoDelAlma"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textColor="#005b7d"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            android:text="@string/favoritos"
            android:id="@+id/textViewEquiposFavoritos" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background"
            android:layout_weight="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/la_camiseta_de_tu_equipo"
                android:textColor="@color/yellow_letters_wizard"
                android:drawablePadding="10dp"
                android:textSize="15dp"
                android:id="@+id/textViewPonerCamiseta"
                android:drawableRight="@drawable/right_arrow"
                android:drawableLeft="@drawable/left_arrow"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="13dp"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLigas" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:spinnerMode="dialog"
                    android:id="@+id/spinnerEquipos" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="139dp"
                    android:layout_height="139dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/elipse"
                    android:id="@+id/imageViewTeam"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarLoaderImage"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/textViewNameSoulTeam"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/actualizar"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:textColor="@color/yellow_letters_wizard"
                android:background="@drawable/rounded_button"
                android:id="@+id/buttonSiguiente"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#444444"
            android:layout_weight="0.7">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:id="@+id/layoutFanaticada"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/fanaticada_white_icon"
                    android:text="@string/fanaticada"
                    android:textSize="10dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/textViewFanaticada" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/layoutPartidos"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/camisa_icon"
                    android:drawablePadding="5dp"
                    android:textSize="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/partidos"
                    android:id="@+id/textViewPartidos" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/layoutFavoritos"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equipos"
                    android:drawablePadding="5dp"
                    android:textColor="#d2ff00"
                    android:textSize="10dp"
                    android:drawableTop="@drawable/yellow_star_icon"
                    android:id="@+id/textViewFavoritos" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/layoutRanking"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/trofeo_icon"
                    android:drawablePadding="5dp"
                    android:textColor="@android:color/white"
                    android:text="@string/ranking"
                    android:textSize="10dp"
                    android:id="@+id/textViewTrofeo" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/layoutAmigos"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="@android:color/white"
                    android:drawableTop="@drawable/amigos_icon"
                    android:text="@string/amigos"
                    android:textSize="10dp"
                    android:id="@+id/textViewAmigos" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
