<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#48fe00">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/back_arrow"
                android:background="@null"
                android:layout_margin="10dp"
                android:id="@+id/imageButtonBackArrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganadores_header"
                android:textColor="#126475"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                android:id="@+id/textViewNivel"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:background="@null"
                android:src="@android:drawable/ic_menu_search"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#0e5a80"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:spinnerMode="dialog"
            android:id="@+id/spinnerCalendario" />

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posicion_label"
            android:id="@+id/textViewPosicion"
            android:textStyle="bold"
            android:textSize="10dp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_label"
            android:textStyle="bold"
            android:textSize="10dp"
            android:textColor="@android:color/black"
            android:id="@+id/textViewNombres"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premios_label"
            android:textStyle="bold"
            android:textSize="10dp"
            android:textColor="@android:color/black"
            android:id="@+id/textViewPremios"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF">

        <LinearLayout
            android:id="@+id/viewPagerMatches"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewWeeklyWinners" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:layout_weight="1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:id="@+id/linearLayoutRanking"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ranking_logo"
                    android:text="@string/ranking"
                    android:textSize="10dp"
                    android:textColor="#bfbfbf"
                    android:id="@+id/textView17" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/linearLayoutNivel"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/nivel_icon_azul"
                    android:drawablePadding="5dp"
                    android:textSize="10dp"
                    android:textColor="#0e5a80"
                    android:text="@string/nivel"
                    android:id="@+id/textView18" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/linearLayoutTrofeos"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trofeos"
                    android:drawablePadding="5dp"
                    android:textColor="#bfbfbf"
                    android:textSize="10dp"
                    android:drawableTop="@drawable/trofeos_icon"
                    android:id="@+id/textView19" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/linearLayout4"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/aciertos_icon"
                    android:drawablePadding="5dp"
                    android:textColor="#bfbfbf"
                    android:text="@string/aciertos"
                    android:textSize="10dp"
                    android:id="@+id/textView20" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/linearLayout5"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:textColor="#bfbfbf"
                    android:drawableTop="@drawable/trofeo_gris_icon"
                    android:text="@string/ganadores"
                    android:textSize="10dp"
                    android:id="@+id/textView21" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>